<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditRecordActivity"
    android:background="@drawable/back3">

    // IT19170176
    // FERNANDO W.N.D
    // CarMart Notices

    <TextView
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:text="@string/n_change_notice_information"
        android:textSize="30dp"
        android:textStyle="bold"

        />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/display_text"
        android:padding="2dp"
        android:background="@drawable/border"
        android:outlineAmbientShadowColor="@color/whiteColor"
        android:src="@drawable/ic_action_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:layout_below="@id/image"
        android:hint="@string/n_enter_a_heading"
        android:autofillHints="Enter a Heading"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/opaciy"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@id/heading"
        android:hint="@string/n_enter_name"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/opaciy"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mobile"
        android:layout_below="@id/name"
        android:hint="@string/n_enter_mobile"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/opaciy"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/mobile"
        android:hint="@string/n_enter_e_mail"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/opaciy"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/province"
        android:layout_below="@id/email"
        android:hint="@string/enter_province"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/opaciy"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notice_info"
        android:layout_below="@id/province"
        android:hint="Enter Notice Information "
        android:inputType="textPersonName|textCapWords"
        android:padding="35dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/opaciy"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_notice"
        android:layout_below="@+id/notice_info"
        android:layout_centerHorizontal="true"
        android:text="Add Notice"
        android:textStyle="bold"
        android:textColor="@color/background5"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        />



</RelativeLayout>