<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/whiteColor">
    // IT19170176
    // FERNANDO W.N.D
    // CarMart Notices
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/profileIv"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_profile"
            />
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/profileIv"
            android:layout_toEndOf="@+id/profileIv"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heading"
                android:text="@string/n_heading_of_notice"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/blackColor"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:text="@string/n_person_name"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mobile"
                android:text="@string/n_phone"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/blackColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:text="@string/n_e_mail"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/blackColor"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notice_info"
                android:text="@string/n_notice"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/blackColor"
                />

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editBtn"
            android:src="@drawable/ic_action_edit"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>



    </RelativeLayout>


</androidx.cardview.widget.CardView>